# embedded-db-benchmarks

./: README.md  benchmark.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: benchmarks.yml
queries/: count.chdb.sql  count.duckdb.sql  groupby-local.chdb.sql  groupby-local.databend.sql  groupby-local.duckdb.sql  groupby.chdb.sql  groupby.databend.sql  groupby.datafusion.sql  groupby.duckdb.sql  version.chdb.sql  version.databend.sql
