[tool.poetry]
name = "embedded-olap-benchmarks"
version = "0.1.2"
description = ""
authors = ["Lorenzo Mangani <lorenzo.mangani@gmail.com>"]

[tool.poetry.dependencies]
psutil = "^5.9.6"
python = "^3.9"
chdb = "^0.16.0rc2"
duckdb = "^0.9.1"
glaredb = "^0.5.1"
databend = "^1.2.207"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
