[tool.poetry]
name = "embedded-olap-benchmarks"
version = "0.1.4"
description = ""
authors = ["Lorenzo Mangani <lorenzo.mangani@gmail.com>"]

[tool.poetry.dependencies]
psutil = "^5.9.6"
python = "^3.9"
chdb = "^2.0.0b1"
duckdb = "^1.0.0"
glaredb = "^0.9.4"
databend = "^1.2.453"
datafusion = "^39.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
